<resources>
    <string name="app_name" translatable="false">DemoLuis</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="i_accept" translatable="false">I Accept</string>
    <string name="ok">OK</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>

    <string name="slide_intro_1_title">Secure</string>
    <string name="slide_intro_1_description">Implement last tecnologies to be secure</string>

    <string name="slide_intro_2_title">Fast</string>
    <string name="slide_intro_2_description">Fast like a lighting</string>
    <string name="load">Load</string>

    <string name="loading">Loading</string>
    <string name="error_loading">Error Loading data from server</string>
    <string name="glide">Glide</string>
    <string name="turn_on_your_bluetooth">Turn on your Bluetooth!</string>
    <string name="read_contacts">Read Contacts</string>

    <string name="network_state">Network State</string>
    <string name="alarm">Alarm</string>
</resources>
