<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.PrivacyActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrivacy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/i_accept" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="false"
        android:text="@string/ok" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReadContacts"
        android:layout_width="wrap_content"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/read_contacts" />
</androidx.appcompat.widget.LinearLayoutCompat>